logout implementado e doc atualizada
