# app/requests/auth/ValidationCodeRequest.go
@@ -1,0 +1,47 @@
+package auth
+
+import (
+	"github.com/go-playground/validator/v10"
+	"gorm.io/gorm"
+    "tradeapi/app/requests"
+)
+
+type ValidationCodeRequestParams struct {
+    Email string `json:"email" validate:"required,email" example:"joao@example.com"`
+}
+
+type ValidationCodeRequest struct {
+	ValidationCodeRequestParams
+	DB *gorm.DB
+}
+
+func NewValidationCodeRequest(db *gorm.DB) *ValidationCodeRequest {
+    return &ValidationCodeRequest{DB: db}
+}
+
+func (l *ValidationCodeRequest) Validate() map[string]interface{} {
+    validationErrors := make(map[string]string)
+	req := requests.NewRequestHelper()
+    
+    // Validação da Step1
+    err := validator.New().Struct(&l.ValidationCodeRequestParams)
+    if err != nil {
+        for _, err := range err.(validator.ValidationErrors) {
+            field := err.Field()
+            jsonTag, ok := req.GetJSONTag(field)
+            if ok {
+                field = jsonTag
+            }
+            validationErrors[field] = requests.GetErrorMessage(err)
+        }
+    }
+    
+    if len(validationErrors) > 0 {
+        return map[string]interface{}{
+            "error":     "validação",
+            "details": validationErrors,
+        }
+    }
+    
+    return nil
+}
