# utils/docs/swagger.json
@@ -4,7 +4,64 @@
         "contact": {}
     },
     "paths": {
-        "/api/register/step1": {
+        "/api/auth/login": {
+            "post": {
+                "description": "Realiza login de usuário",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logar usuário",
+                "parameters": [
+                    {
+                        "description": "Dados do usuário",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.LoginRequestParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Resposta de login",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.TokenResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/logout": {
+            "get": {
+                "description": "Desloga o usuário atual",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Autenticação"
+                ],
+                "summary": "Deslogar usuário",
+                "responses": {
+                    "200": {
+                        "description": "Usuário deslogado com sucesso",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/register_step1": {
             "post": {
                 "description": "Cria um novo usuário sem senha",
                 "consumes": [
@@ -24,7 +81,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/requests.RegisterRequestStep1"
+                            "$ref": "#/definitions/auth.RegisterRequestStep1"
                         }
                     }
                 ],
@@ -38,7 +95,7 @@
                 }
             }
         },
-        "/api/register/step2": {
+        "/api/auth/register_step2": {
             "post": {
                 "description": "Define a senha do usuário",
                 "consumes": [
@@ -58,7 +115,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/requests.RegisterRequestStep2"
+                            "$ref": "#/definitions/auth.RegisterRequestStep2"
                         }
                     }
                 ],
@@ -72,7 +129,7 @@
                 }
             }
         },
-        "/api/send-validation-code": {
+        "/api/auth/send-validation-code": {
             "post": {
                 "description": "Envia código de validação para o e-mail fornecido.",
                 "tags": [
@@ -81,12 +138,12 @@
                 "summary": "Envia código de validação",
                 "parameters": [
                     {
-                        "description": "E-mail do usuário",
-                        "name": "email",
+                        "description": "e-mail",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/auth.ValidationCodeRequestParams"
                         }
                     }
                 ],
@@ -98,6 +155,43 @@
                             "additionalProperties": {
                                 "type": "string"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/verify-validation-code": {
+            "post": {
+                "description": "Verifica se o código de validação é válido.",
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Verifica código de validação",
+                "parameters": [
+                    {
+                        "description": "E-mail do usuário",
+                        "name": "email",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "email, code",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.VerifyCodeRequestParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Código validado com sucesso",
+                        "schema": {
+                            "type": "object"
                         }
                     }
                 }
@@ -122,49 +216,100 @@
                     }
                 }
             }
-        },
-        "/api/verify-validation-code": {
-            "post": {
-                "description": "Verifica se o código de validação é válido.",
-                "tags": [
-                    "Auth"
-                ],
-                "summary": "Verifica código de validação",
-                "parameters": [
-                    {
-                        "description": "E-mail do usuário",
-                        "name": "email",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "Código de validação",
-                        "name": "code",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Código válido",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
+        "auth.LoginRequestParams": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "joao@example.com"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 6,
+                    "example": "senha123"
+                }
+            }
+        },
+        "auth.RegisterRequestStep1": {
+            "type": "object",
+            "required": [
+                "email",
+                "name"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "joao@example.com"
+                },
+                "name": {
+                    "type": "string",
+                    "minLength": 3,
+                    "example": "João Silva"
+                }
+            }
+        },
+        "auth.RegisterRequestStep2": {
+            "type": "object",
+            "required": [
+                "confirm_password",
+                "hash",
+                "password"
+            ],
+            "properties": {
+                "confirm_password": {
+                    "type": "string",
+                    "example": "senha123"
+                },
+                "hash": {
+                    "type": "string",
+                    "example": "72fd3951e5bd758b7619ddc62af1f052"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 6,
+                    "example": "senha123"
+                }
+            }
+        },
+        "auth.ValidationCodeRequestParams": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "joao@example.com"
+                }
+            }
+        },
+        "auth.VerifyCodeRequestParams": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string",
+                    "example": "joao@example.com"
+                }
+            }
+        },
+        "controllers.TokenResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -188,47 +333,6 @@
                 },
                 "updated_at": {
                     "type": "string"
-                }
-            }
-        },
-        "requests.RegisterRequestStep1": {
-            "type": "object",
-            "required": [
-                "email",
-                "name"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "example": "joao@example.com"
-                },
-                "name": {
-                    "type": "string",
-                    "minLength": 3,
-                    "example": "João Silva"
-                }
-            }
-        },
-        "requests.RegisterRequestStep2": {
-            "type": "object",
-            "required": [
-                "confirm_password",
-                "hash",
-                "password"
-            ],
-            "properties": {
-                "confirm_password": {
-                    "type": "string",
-                    "example": "senha123"
-                },
-                "hash": {
-                    "type": "string",
-                    "example": "72fd3951e5bd758b7619ddc62af1f052"
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 6,
-                    "example": "senha123"
                 }
             }
         },
